--- a/IzvorniKod/frontend/dart_arena/package.json
+++ b/IzvorniKod/frontend/dart_arena/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@chakra-ui/css-reset": "^2.3.0",
-    "@chakra-ui/react": "^3.16.1",
+    "@chakra-ui/react": "^3.2.5",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "bootstrap": "^5.3.6",
+    "flag-icon-css": "^4.1.7",
+    "framer-motion": "^12.10.5",
     "jwt-decode": "^4.0.0",
     "next": "15.2.1",
     "next-themes": "^0.4.6",
@@ -20,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-select": "^5.10.1",
     "react-select-country-list": "^2.2.3",
+    "sass": "^1.87.0",
     "swiper": "^11.2.5",
     "zod": "^3.24.2"
   },
@@ -30,6 +35,6 @@
     "@types/react-dom": "^19",
     "@types/react-select-country-list": "^2.2.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
