--- a/IzvorniKod/backend/src/main/resources/application.properties
+++ b/IzvorniKod/backend/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 spring.application.name=dartarena
 
-#ovo je samo za test h2 baze, nije trajna baza
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.hibernate.ddl-auto=update
-#spring.h2.console.enabled=true
-
-# supabase pokusaj
+# supabase setup
 spring.datasource.url=${SPRING_DATABASE_URL}
 spring.datasource.username=${SPRING_DATABASE_USERNAME}
 spring.datasource.password=${SPRING_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-# zasad dela
+
+# supabase storage bucket
+supabase.service.role=${SUPABASE_SERVICE_ROLE}
+supabase.url=https://${SUPABASE_PROJECT_ID}.supabase.co
 
 spring.jwt.secret=${SPRING_JWT_SECRET}
+
+# ogranicenje i dozvola sa upload multipart/form-data podataka
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
