--- a/IzvorniKod/frontend/dart_arena/package.json
+++ b/IzvorniKod/frontend/dart_arena/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^3.2.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@tanstack/react-query": "^5.76.1",
     "bootstrap": "^5.3.6",
     "flag-icon-css": "^4.1.7",
     "framer-motion": "^12.10.5",
@@ -26,7 +27,8 @@
     "react-select-country-list": "^2.2.3",
     "sass": "^1.87.0",
     "swiper": "^11.2.5",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
