--- a/IzvorniKod/frontend/dart_arena/package.json
+++ b/IzvorniKod/frontend/dart_arena/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^3.2.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.1",
+    "@mui/x-charts": "^8.5.1",
     "@tanstack/react-query": "^5.76.1",
     "bootstrap": "^5.3.6",
     "flag-icon-css": "^4.1.7",
@@ -27,6 +29,8 @@
     "react-select-country-list": "^2.2.3",
     "sass": "^1.87.0",
     "swiper": "^11.2.5",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.4"
   },
