--- a/IzvorniKod/backend/Dockerfile
+++ b/IzvorniKod/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build sa Maven i JDK 17 (najčešće dostupno)
-FROM maven:3.8.6-openjdk-17 AS build
+FROM maven:3.8.6-jdk-17 AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
