--- a/IzvorniKod/backend/Dockerfile
+++ b/IzvorniKod/backend/Dockerfile
@@ -1,13 +1,17 @@
-# Stage 1: Build sa Maven i JDK 17 (najčešće dostupno)
-FROM maven:3.8.6 AS build
+# Stage 1: Build sa JDK 21 i Maven-om
+FROM openjdk:21-jdk-slim
+
+RUN apt-get update && apt-get install -y maven && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
+
 RUN mvn clean package -DskipTests
 
-# Stage 2: Pokreni aplikaciju sa JDK 21 runtime
+# Stage 2: Runtime sa JDK 21
 FROM openjdk:21-jdk-slim
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=0 /app/target/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
